--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,20 @@
 {
-  "name": "QuickFind",
+  "name": "LinkMagpie",
   "description": "Finds stuff quick.",
   "version": "0.1",
   "manifest_version": 2,
+  "content_scripts": [
+    {
+      "matches":["<all_urls>"],
+      "js": [
+          "search.js",
+          "fuse.js"
+        ]
+    }
+  ],
   "browser_action": {
-    "default_popup": "search_popup.html"
+    "default_popup": "search_popup.html",
+    "default_icon": "icon.png"
   },
   "permissions": [
       "tabs", "activeTab", "<all_urls>"
