--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,10 @@
     "default_popup": "search_popup.html",
     "default_icon": "icon.png"
   },
+  "icons": { "16": "icon16.png",
+             "48": "icon48.png",
+             "128": "icon128.png" },
+                
   "permissions": [
       "tabs", "activeTab", "<all_urls>"
   ],
