--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "content_scripts": [
     {
       "matches":["<all_urls>"],
-      "js": ["search.js", "fuse.js"]
+      "js": ["search.js"]
     }
   ],
   "browser_action": {
