--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,34 @@
 {
   "name": "LinkMagpie",
-  "description": "Finds stuff quick.",
-  "version": "0.1",
+  "author": "Evan Lynch",
+  "description": "Click links quick.",
+  "version": "1.0",
   "manifest_version": 2,
+  "icons": { "16": "icon16.png",
+             "48": "icon48.png",
+             "128": "icon128.png" },
+
+
+  "browser_action": {
+    "default_popup": "linkmagpie.html",
+    "default_icon": "icon.png"
+  },
+
+
   "content_scripts": [
     {
       "matches":["<all_urls>"],
       "js": ["search.js"]
     }
   ],
-  "browser_action": {
-    "default_popup": "search_popup.html",
-    "default_icon": "icon.png"
-  },
-  "icons": { "16": "icon16.png",
-             "48": "icon48.png",
-             "128": "icon128.png" },
+  
+  
                 
   "permissions": [
       "tabs", "activeTab", "<all_urls>"
   ],
+
+
   "commands": {
     "_execute_browser_action": {
       "description" : "Press Ctrl+Period to open search",
@@ -29,4 +38,5 @@
       }
     }
   }
+
 }
